# text2code_strava_shared

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app_instance.py  deploy_v2.py  prompts.yaml  pyproject.toml  sql_postgres_strava_init.sql  strava_v2.conf  utils.py  utils_datawrapper.py  utils_datawrapper_config.py  utils_db.py  utils_genai.py  utils_strava.py
agents/: build_sql_agent.py  code_interpretor_agent.py  debug_sql_agent.py  response_general_agent.py  response_sql_agent.py  retrieval_agent.py  router_agent.py  visualization_agent.py
chains/: workflow_debug.py  workflow_summary.py  workflow_text2sql.py
client_frontend/: homepage_frontend.html  strava_dashboard_chunks.html  strava_dashboard_heatmap_frontend.html  strava_dashboard_search_frontend.html  strava_dashboard_top_frontend.html
routes/: routes_strava.py  routes_telegram.py
